@@ -2,10 +2,14 @@
  OmegaT 2.2.3 update 1
 ----------------------------------------------------------------------
   1 Enhancement
-  0 Bugfix
+  1 Bugfix
 ----------------------------------------------------------------------
 2.2.3 update 1 vs. 2.2.3
 
+  Implemented requests:
+
+  - Translatable sheet names for Calc documents
+  http://sourceforge.net/support/tracker.php?aid=2804745
 
   Other enhancements:
 
